[tool.poetry]
name = "showcase"
version = "0.0.1"
description = "DeepFold for IITP showcase"
authors = ["DeepFold Protein Research"]
readme = "README.md"
repository = "https://github.com/DeepFoldProtein/iitp-showcase"


[tool.poetry.dependencies]
python = ">=3.10"
matplotlib = "^3.8"
numpy = "^1.26.0"
scipy = "^1.12.0"
requests = "^2.26.0"
tqdm = "^4.62.2"
py3Dmol = "^2.0.1"


[build-system]
requires = ["poetry-core>=1.00,<2.0.0"]
build-backend = "poetry.core.masonry.api"
